--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        
+        <!-- Amar Kumar -->
         <title>Basic Calculator</title>
         <style>
             body{
