--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         
         <!-- Amar Kumar -->
         <title>Basic Calculator</title>
+        <link href="https://static.vecteezy.com/system/resources/previews/000/450/250/original/vector-calculator-icon.jpg" rel="icon">
         <style>
             body{
                 display: flex;
